2010.02.21: David Nichols
	 * minor updates to enable Qore to compile with Cygwin
	 * implemented QORE_OPT_SIGNAL_HANDLING option and constant:
	   HAVE_SIGNAL_HANDLING

2010.02.20: David Nichols
	 * implemented %require-types parse directive (PO_REQUIRE_TYPES) to
	   require type information in all declarations
	 * implemented two-phase commit for global variables in the 
	   QoreProgram class

2010.02.18: David Nichols
	 * updated the Queue class documentation to clarify what a 0 argument
	   means with Queue::pop() and Queue::get()
	 * fixed global variable initialization according to default value of
	   its type

2010.02.17: David Nichols
	 * fixed a bug setting the program context for imported functions
	 * fixed a bug tracking thread call stacks

2010.02.16: David Nichols
	 * fixed a bug where if local variables were used in a reference 
	   expression with the background operator, whenever the reference
	   was accessed in the called code a crash would result

2010.02.15: David Nichols
	 * added warning constants and documented warning masks in Program
	   methods
	 * renamed all c++ source files to cpp to make porting to Windows
	   easier

2010.02.14: David Nichols
	 * finished adding hard typing to xml functions in lib/ql_xml.cc

2010.02.13: David Nichols
	 * minor fixes matching variants and assigning values to references
	 * started adding hard typing to xml functions in lib/ql_xml.cc

2010.02.12: David Nichols
	 * removed incorrect optimization in user function execution that
	   corrupted argument lists
	 * fixed call stack reporting when exceptions are raised
	 * updates to address warnings and compile errors with the SunPro
	   compiler
	 * fixed bugs in flexible/extensible type matching support
	 * fixed internal APIs and added supoprt for caching lookup maps from
	   externally-implemented types and type information
	 * fixed a bug in user variant execution that left local variables on